ecmascript/parser/tests/test262-error-references/fail/8552e0809ca624cd.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/8552e0809ca624cd.js:2:14
  |
2 |     function*({x: y = yield 3}) {}
  |              ^

